Wed Jan 21 01:43:42 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* regex.c (re_compile_pattern): too many pops for non register subexpr.

	* parse.y (yylex): open parentheses after identifiers are argument 
	  list, even if whitespaces have seen.

Tue Jan 20 15:19:59 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y (terms): quoted word list by %w(a b c).

	* ext/tcltklib/extconf.rb: more accurate check for tcl/tk libs.

	* file.c (rb_stat): most of the FileTest methods (and function
 	  `test') accept File objects as the argument.

Tue Jan 19 18:19:24 1998  WATANABE Hirofumi  <watanabe@ase.ptg.sony.co.jp>

	* ext/extmk.rb.in (install): there should be no newline after install:

	* re.c (MIN): renamed from min().  there's a local variable named
 	  min in the file, so that some cpp will raise an error.

Mon Jan 19 16:30:05 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* version 1.1b5 released.

	* process.c (rb_syswait): no exception raised.

Fri Jan 16 00:43:43 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* ruby.h (CLONESETUP): copies its singleton classes too.

	* class.c (singleton_class_attached): saves binded object in the
	  singleton classes.

	* eval.c (rb_eval): calls singleton_method_added even in the
	  singleton class clauses.

Fri Jan 15 23:22:43 1998  WATANABE Hirofumi  <watanabe@ase.ptg.sony.co.jp>

	* ruby.c (proc_options): -S does not recognize PATH.

Thu Jan 15 02:03:12 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (rb_clear_cache_by_id): clear only affected cache
	  entries.

Wed Jan 14 02:14:48 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* ext/socket/socket.c: new UDP/IP socket classes.

Tue Jan 13 10:00:18 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* string.c (str_cmp): ignorecase($=) works wrong.

Fri Jan  9 13:19:55 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* version 1.1b4 released.

	* eval.c (f_missing): class name omitted from the error message.

	* error.c (exc_inspect): description changed.
