@@ -1,5 +1,8 @@
 Wed Jan 21 01:43:42 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>
 
+	* eval.c (PUSH_FRAME): do not use ALLOCA_N().  crash on some
+	  platforms (such as HP-UX or mswin32).
+
 	* regex.c (re_compile_pattern): too many pops for non register subexpr.
 
 	* parse.y (yylex): open parentheses after identifiers are argument 
